# dropset

./: .gitignore  Anchor.toml  CLAUDE.md  Cargo.toml  Makefile  README.md  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/: settings.json
.claude/hooks/: no_compound_bash.py  no_git_grep.py  worktree_edit_guard.py
.claude/scripts/: iterm-attend.sh  iterm-colors.sh  iterm-monitor.sh  iterm-paint.sh  iterm-reorder.py  iterm-reset-windows.sh  iterm-restart-monitors.sh  iterm-start.sh  iterm-stop.sh  test_iterm_reorder.py
.claude/tools/: allowlist.py  cspell_place.py  firm_core.py  firm_last.py  init_pr_branch.py  memory_scan_gate.py  merge_tasks.py  prune_conversations.py  prune_worktrees.py  run_quiet.py  session_metrics.py  sync_blockers.py  test_firm_core.py  test_firm_last.py  test_init_pr_branch.py  test_merge_tasks.py  test_prune_conversations.py  test_run_quiet.py  test_session_metrics.py
.github/workflows/: explorer-image.yml  lint.yml  sdk.yml  semantic-pr.yml  test.yml
analytics/fx-survey/: Cargo.toml  Dockerfile  docker-compose.yml
analytics/fx-survey/queries/: cex_price_insert.sql
analytics/fx-survey/schema/: cex_prices.sql
analytics/fx-survey/src/: coinbase.rs  config.rs  lib.rs  store.rs
bots/localnet-support/: Cargo.toml
bots/localnet-support/src/: lib.rs
bots/maker-bot/: Cargo.toml  README.md
bots/maker-bot/src/: chain.rs  config.rs  context.rs  fills.rs  lib.rs  main.rs  tasks.rs
bots/maker-bot/src/model/: fair_mid.rs  feeds.rs  inventory.rs  killswitch.rs  ladder.rs  mod.rs  skew.rs  triggers.rs
bots/taker-bot/: Cargo.toml  README.md
bots/taker-bot/src/: chain.rs  config.rs  context.rs  lib.rs  main.rs  model.rs  tasks.rs
brand-assets/: copy-brand-assets.mjs
cfg/: cspell.yml  dictionary.txt  pre-commit-lint.yml  sqlfluff.cfg  taplo.toml
decks/: .gitignore  README.md  demo-v1-spec.md  package.json  tsconfig.json
decks/app/: globals.css  layout.tsx  page.tsx
decks/lib/: decks.ts
decks/scripts/: copy-brand-assets.mjs
decks/theme/: tokens.ts
docs/: architecture.md  data-feeds.md  fx-survey.md  indexer.md  interface.md  market-making-mvp.md  skip-ci-demo.md
docs/conventions/: audit-registry.md  aws-infra.md  commits-and-prs.md  context-economy.md  docs-and-style.md  github-mcp.md  linear-automation.md  local-integrations.md  shell-commands.md  skill-tooling.md  sub-agent-brief.md
fair-value/: Cargo.toml
fair-value/src/: basis.rs  config.rs  engine.rs  lib.rs  reading.rs
feeds/: Cargo.toml
feeds/migrations/: 0001_feed_cursors.sql
feeds/queries/: cursor_get.sql  cursor_set.sql
feeds/src/: cursor.rs  forward.rs  http.rs  lib.rs  record.rs  rpc.rs  runner.rs  sink.rs  source.rs  store.rs  stream.rs
feeds/tests/: store_postgres.rs
frontend/: .env.example  .gitignore  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
indexer/: Cargo.toml
indexer/migrations/: 0001_init.sql
indexer/queries/: cursor_get.sql  cursor_set.sql  event_insert.sql  events_list.sql  fill_insert.sql  fills_after.sql  legs_for.sql  market_stats_recompute.sql  markets_list.sql  recent_fills.sql  take_upsert.sql  takes_list.sql
indexer/src/: aggregate.rs  api.rs  config.rs  decode.rs  ingest.rs  lib.rs  model.rs  store.rs
keys/: AAAA.json  BBBB.json  CADC.json  CCCC.json  DDDD.json  EEEE.json  EURC.json  FFFF.json  MXNe.json  README.md  TGBP.json  USDC.json  VCHF.json  XSGD.json  ZARP.json  idrx.json
programs/dropset/: Cargo.toml  build.rs
programs/dropset/src/: errors.rs  events.rs  lib.rs  price.rs  state.rs
programs/dropset/src/asm/: entrypoint.s
programs/dropset/src/instructions/: admin.rs  close_market.rs  close_registry.rs  close_vault.rs  create_market.rs  create_vault.rs  deposit.rs  deposit_leader.rs  force_withdraw.rs  freeze_vault.rs  init.rs  mod.rs  register_market.rs  register_vault.rs  registry_defaults.rs  retune.rs  set_liquidity_profile.rs  set_outside_deposits.rs  set_quote_authority.rs  set_reference_price.rs  swap.rs  withdraw.rs  withdraw_leader.rs
programs/dropset/src/state/: market.rs  mod.rs  registry.rs  vault_depositor.rs
programs/dropset/src/state/market/: access.rs  accrual.rs  dll.rs  layout.rs  mod.rs  reference_price.rs  test_support.rs
programs/dropset/tests/: admin.rs  asm_parity.rs  create_market.rs  create_vault.rs  deposit.rs  deposit_leader.rs  end_to_end.rs  events.rs  init.rs  lifecycle.rs  price_conformance.rs  register_market.rs  register_vault.rs  retune.rs  sdk_conformance.rs  set_liquidity_profile.rs  set_outside_deposits.rs  set_quote_authority.rs  set_reference_price.rs  swap.rs  teardown.rs  teardown_disabled.rs  withdraw.rs  withdraw_leader.rs
programs/dropset/tests/common/: events.rs  fixture.rs  mod.rs
scripts/: copy-brand-assets.mjs
sdk/: README.md
sdk/interface/: Cargo.toml  README.md
sdk/interface/examples/: gen_simulate_swap.rs
sdk/interface/src/: layout.rs  lib.rs  matching.rs  wasm.rs
sdk/interface/tests/: wasm_conformance.rs
sdk/math-core/: Cargo.toml  README.md
sdk/math-core/examples/: gen_conformance.rs  gen_quoting.rs  gen_share.rs
sdk/math-core/src/: lib.rs  matching_math.rs  price.rs  share.rs  wasm.rs
sdk/math-core/tests/: conformance.rs  share_conformance.rs
sdk/price-core/: Cargo.toml
sdk/price-core/examples/: gen_conformance.rs  gen_quoting.rs
sdk/price-core/src/: layout.rs  lib.rs  matching.rs  matching_math.rs  price.rs  wasm.rs
sdk/price-core/tests/: conformance.rs
sdk/rs/: Cargo.toml  README.md
sdk/rs/src/: events.rs  lib.rs  price.rs  quoting.rs
sdk/rs/src/adapters/: amm.rs  beethoven.rs  dflow.rs  jupiter.rs  mod.rs  titan.rs
sdk/rs/tests/: quoting_conformance.rs
tools/session-metrics/: Cargo.toml
tools/session-metrics/src/: main.rs  model.rs
tools/stage-backlog/: Cargo.toml  stage_backlog.py  test_stage_backlog.py
tools/stage-backlog/src/: linear.rs  main.rs  merge.rs  model.rs  plan.rs
tui/: Cargo.toml
tui/src/: accounts.rs  action.rs  app.rs  book.rs  bot.rs  chain.rs  deploy.rs  explorer.rs  fills.rs  job.rs  lib.rs  main.rs  market.rs  teardown.rs  ui.rs  validator.rs  wallet.rs
(+232 files in other folders)
