# Optimize dependencies (and workspace crates pulled in as deps) at
# opt-level 2 under the dev/test profile, leaving the test crates
# themselves unoptimized for fast compiles. The integration suite runs the
# deployed program through the litesvm virtual machine on the host; at
# opt-level 0 that interpretation dominates test runtime. The added compile
# cost is a one-time hit amortized by the CI rust-cache, and this does NOT
# touch the on-chain .so (`cargo build-sbf` builds the release profile).

[profile.dev.package."*"]
opt-level = 2

[profile.release]
overflow-checks = true

[workspace]
members = ["programs/dropset", "sdk/math-core", "sdk/interface", "sdk/rs"]
resolver = "2"

[workspace.dependencies]
litesvm = "0.11"
solana-instruction = "3.0"
solana-keypair = "3.0.1"
solana-loader-v3-interface = {version = "6", features = ["bincode"]}
solana-native-token = "3"
solana-program-log = {version = "1.1", features = ["macro"]}
solana-pubkey = {version = "4.1", features = ["curve25519"]}
solana-sdk-ids = "3"
wincode = {version = "0.5", features = ["derive"]}

[workspace.dependencies.anchor-lang-v2]
branch = "anchor-next"
git = "https://github.com/solana-foundation/anchor.git"

[workspace.dependencies.anchor-spl-v2]
branch = "anchor-next"
git = "https://github.com/solana-foundation/anchor.git"

[workspace.dependencies.anchor-v2-testing]
branch = "anchor-next"
git = "https://github.com/solana-foundation/anchor.git"
