# Optimize dependencies (and workspace crates pulled in as deps) at
# opt-level 2 under the dev/test profile, leaving the test crates
# themselves unoptimized for fast compiles. The integration suite runs the
# deployed program through the litesvm virtual machine on the host; at
# opt-level 0 that interpretation dominates test runtime. The added compile
# cost is a one-time hit amortized by the CI rust-cache, and this does NOT
# touch the on-chain .so (`cargo build-sbf` builds the release profile).

[profile.dev.package."*"]
opt-level = 2

[profile.release]
overflow-checks = true

[workspace]
members = ["programs/dropset", "sdk/math-core", "sdk/interface", "sdk/rs"]
resolver = "2"

# Shared package metadata. The publishable SDK crates (math-core, interface,
# rs) inherit the publish-required/recommended fields from here with
# `<field>.workspace = true`; the on-chain `dropset` crate (publish = false)
# inherits only `edition`/`version`. `description`, `publish`, and `readme`
# stay per-crate — `readme` because an inherited path resolves against the
# workspace root, not the crate dir.
[workspace.package]
categories = ["cryptography::cryptocurrencies"]
edition = "2021"
keywords = ["solana", "dropset", "dex", "eclob", "trading"]
license = "Apache-2.0"
repository = "https://github.com/DASMAC-com/dropset"
version = "0.1.0"

[workspace.dependencies]
litesvm = "0.11"
solana-instruction = "3.0"
solana-keypair = "3.0.1"
solana-loader-v3-interface = {version = "6", features = ["bincode"]}
solana-native-token = "3"
solana-program-log = {version = "1.1", features = ["macro"]}
solana-pubkey = {version = "4.1", features = ["curve25519"]}
solana-sdk-ids = "3"
wincode = {version = "0.5", features = ["derive"]}

# `version` rides alongside `git` so the manifest is publish-*shaped*: local
# builds resolve from the `anchor-next` fork, but `cargo publish` strips the
# `git` source and keeps only `version` (Cargo's "multiple locations" rule).
# `dropset-math-core` carries this as an *optional* dep behind its `idl`
# feature; that feature is non-default and the on-chain program is its only
# consumer, but it cannot be removed — `anchor idl build` requires `Price`'s
# `IdlType` impl, so dropping it breaks IDL generation for every type that
# embeds a `Price`.
#
# Caveat — this does NOT make the SDK crates publishable today: `cargo
# package`/`publish` resolves the *entire* graph, optional deps included, so
# `anchor-lang-v2 = "2.0.0"` must exist on crates.io even though `idl` is
# never activated. The `anchor-next` fork isn't released, so math-core (and
# transitively `dropset-interface` / `dropset-sdk`) stays blocked on an
# upstream `anchor-lang-v2 2.0.0` crates.io release. When that lands, the
# stripped manifest resolves and `cargo publish` works — that's what the
# `version` here pre-stages. (Tracked: ENG-555.)
[workspace.dependencies.anchor-lang-v2]
branch = "anchor-next"
git = "https://github.com/solana-foundation/anchor.git"
version = "2.0.0"

[workspace.dependencies.anchor-spl-v2]
branch = "anchor-next"
git = "https://github.com/solana-foundation/anchor.git"

[workspace.dependencies.anchor-v2-testing]
branch = "anchor-next"
git = "https://github.com/solana-foundation/anchor.git"
