# Optimize dependencies (and workspace crates pulled in as deps) at
# opt-level 2 under the dev/test profile, leaving the test crates
# themselves unoptimized for fast compiles. The integration suite runs the
# deployed program through the litesvm virtual machine on the host; at
# opt-level 0 that interpretation dominates test runtime. The added compile
# cost is a one-time hit amortized by the CI rust-cache, and this does NOT
# touch the on-chain .so (`cargo build-sbf` builds the release profile).

[profile.dev.package."*"]
opt-level = 2

[profile.release]
overflow-checks = true

[workspace]
members = ["bots/maker-bot", "programs/dropset", "sdk/math-core", "sdk/interface", "sdk/rs", "tools/session-metrics", "tui"]
resolver = "2"

[workspace.dependencies]
litesvm = "0.11"
solana-instruction = "3.0"
solana-keypair = "3.0.1"
solana-loader-v3-interface = {version = "6", features = ["bincode"]}
solana-native-token = "3"
solana-program-log = {version = "1.1", features = ["macro"]}
solana-pubkey = {version = "4.1", features = ["curve25519"]}
solana-sdk-ids = "3"
wincode = {version = "0.5", features = ["derive"]}

# This git fork is why the SDK crates can't `cargo publish` yet — and why
# they stay `publish = false`. Two facts pin that down. First, the dep can't
# be dropped: `dropset-math-core` needs `anchor-lang-v2` behind its `idl`
# feature because `anchor idl build` requires `Price`'s `IdlType` impl, so
# removing it breaks IDL generation for every type that embeds a `Price`.
# Second, `cargo package`/`publish` resolves the *whole* dependency graph,
# optional deps included, so a `git` source here makes the SDK crates
# unpublishable regardless of whether `idl` is ever activated.
#
# The repo intentionally tracks Anchor v2 (`anchor-lang-v2` 2.0.0, the
# in-development next major) — newer than the released `anchor-lang` 1.0.x,
# so do NOT downgrade to it. The unblock is an upstream crates.io release of
# Anchor v2: `anchor-lang-v2` isn't published yet, so the SDK crates stay
# `publish = false` until it is.
[workspace.dependencies.anchor-lang-v2]
branch = "anchor-next"
git = "https://github.com/solana-foundation/anchor.git"

[workspace.dependencies.anchor-spl-v2]
branch = "anchor-next"
git = "https://github.com/solana-foundation/anchor.git"

[workspace.dependencies.anchor-v2-testing]
branch = "anchor-next"
git = "https://github.com/solana-foundation/anchor.git"

# Shared package metadata. The publishable SDK crates (math-core, interface,
# rs) inherit the publish-required/recommended fields from here with
# `<field>.workspace = true`; the on-chain `dropset` crate (publish = false)
# inherits only `edition`/`version`. `description`, `publish`, and `readme`
# stay per-crate — `readme` because an inherited path resolves against the
# workspace root, not the crate dir.
[workspace.package]
categories = ["cryptography::cryptocurrencies"]
edition = "2021"
keywords = ["solana", "dropset", "dex", "eclob", "trading"]
license = "Apache-2.0"
repository = "https://github.com/DASMAC-com/dropset"
version = "0.1.0"
