# cspell:word rustls
# Prototype off-chain event indexer for the Dropset eCLOB (docs/indexer.md).
# Subscribes to the program's `emit_cpi!` events, decodes them with the
# shared `dropset_sdk::events` codec, persists raw legs under the frozen
# `(slot, txn_index, signature, event_ordinal)` key, derives take-level and
# inventory rollups in a watermarked worker, and serves the `/v1` REST
# surface (interface.md §5). Two binaries: `dropset-indexer` (ingest +
# aggregate) and `dropset-indexer-api` (the `/v1` server).

[[bin]]
name = "dropset-indexer"
path = "src/bin/indexer.rs"

[[bin]]
name = "dropset-indexer-api"
path = "src/bin/api.rs"

[dependencies]
anyhow = "1"
axum = "0.7"
# Inner-instruction `data` arrives base58-encoded in the RPC `getTransaction`
# response; decode it before the event-tag walk.
bs58 = "0.5"
# The shared event decoder (`dropset_sdk::events`) + the blocking `RpcClient`
# behind `fetch`, polled from a `spawn_blocking` task. Same 3.x solana line as
# the maker-bot so there is one `Pubkey` type across decode and RPC.
dropset-sdk = {path = "../sdk/rs", features = ["fetch"]}
rust_decimal = {version = "1", features = ["db-postgres", "serde-str"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
solana-client = "~3.1"
solana-commitment-config = "3"
solana-pubkey = "3"
solana-signature = "3"
solana-transaction-status = "~3"
# String-typed runtime queries (no compile-time `DATABASE_URL`); `migrate`
# embeds `./migrations`; `rust_decimal` maps u64 atoms onto Postgres NUMERIC
# without the i64 truncation a BIGINT bind would risk.
sqlx = {version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "migrate", "rust_decimal", "json"]}
tokio = {version = "1", features = ["rt-multi-thread", "macros", "signal", "time"]}
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}

[dev-dependencies]
# Build tagged event bytes in the decode unit test.
borsh = {version = "1", features = ["derive"]}

[package]
description = "Prototype event indexer for the Dropset eCLOB program."
name = "dropset-indexer"
publish = false
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
