# Localnet control-plane TUI. A ratatui + crossterm panel that
# spawns a `solana-test-validator`, gates each bootstrap action on live
# on-chain state (a derived `Phase`), and drives the eCLOB lifecycle —
# deploy, init, create-market, create-vault, teardown, wipe — end to end.
# Rust-only, not published. No tokio: a synchronous event loop services a
# `std::thread` + `mpsc` background-job harness, and the SDK fetch path is
# the blocking `RpcClient` (sdk/rs `fetch` feature).

[[bin]]
name = "dropset-tui"
path = "src/main.rs"

# Headless rent-reclamation script. Drives the same `teardown::run` the TUI's
# "Teardown & reclaim" action does, with no UI — runnable in automation and,
# with an explicit `--rpc-url`, against a real cluster. `make teardown`.
[[bin]]
name = "dropset-teardown"
path = "src/bin/teardown.rs"

[dependencies]
anyhow = "1"
# Zero the `LiquidityProfile` Pod before filling its top-of-book level for
# the bootstrap quote ladder (matches the SDK's own profile construction).
bytemuck = "1"
crossterm = "0.28"
# The off-chain client: Codama instruction builders (whose AccountMeta
# ordering is the single source of truth `chain.rs` builds on), the typed
# `fetch_*` account decoders, the `layout` slab mirror (active-vault walk
# for teardown), and the blocking `RpcClient` — all behind `fetch`.
dropset-sdk = {path = "../sdk/rs", features = ["fetch"]}
open = "5"
ratatui = "0.29"
# Pinned to the SDK's 3.x line (sdk/rs/Cargo.toml) so there is one
# `Pubkey` / `Instruction` / `RpcClient` type across the builder, fetch,
# and transaction paths — NOT the workspace's solana-pubkey 4.x, which the
# on-chain crate uses. `~3.1` on solana-client matches the validator minor
# the Makefile's check-toolchain gates (3.1.x) for wire/RPC agreement.
solana-client = "~3.1"
solana-commitment-config = "3"
solana-instruction = "3"
solana-keypair = "3"
solana-loader-v3-interface = {version = "6", features = ["bincode"]}
solana-native-token = "3"
solana-pubkey = "3"
solana-signer = "3"
solana-transaction = "3"
tempfile = "3"

[lib]
name = "dropset_tui"
path = "src/lib.rs"

[package]
description = "Localnet control-plane TUI for the Dropset eCLOB program."
name = "dropset-tui"
publish = false
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
