# Localnet control-plane TUI. A ratatui + crossterm panel that
# spawns a `solana-test-validator`, gates each bootstrap action on live
# on-chain state (a derived `Phase`), and drives the eCLOB lifecycle ŌĆö
# deploy, init, create-market, create-vault, teardown, wipe ŌĆö end to end.
# Rust-only, not published. No tokio: a synchronous event loop services a
# `std::thread` + `mpsc` background-job harness, and the SDK fetch path is
# the blocking `RpcClient` (sdk/rs `fetch` feature).

[[bin]]
name = "dropset-tui"
path = "src/main.rs"

# Headless rent-reclamation script. Drives the same `teardown::run` the TUI's
# "Teardown & reclaim" action does, with no UI ŌĆö runnable in automation and,
# with an explicit `--rpc-url`, against a real cluster. `make teardown`.
[[bin]]
name = "dropset-teardown"
path = "src/bin/teardown.rs"

[dependencies]
anyhow = "1"
# Decode the base58 `data` of an `emit_cpi!` event inner instruction (the
# recent-fills subscription; mirrors the maker bot's fills path).
bs58 = "0.5"
# Zero the `LiquidityProfile` Pod before filling its top-of-book level for
# the bootstrap quote ladder (matches the SDK's own profile construction).
bytemuck = "1"
crossterm = "0.28"
# Shared localnet-host plumbing: the SPL / ATA / System program-id consts, the
# ATA derivation and its `CreateIdempotent` / `MintTo` byte-instruction
# builders, and the Agave `http`ŌåÆ`ws` PubSub-URL derivation (the recent-fills
# subscription's endpoint). Pure ŌĆö this crate keeps its own CU-measuring send.
dropset-localnet-support = { path = "../bots/localnet-support" }
# Local-time conversion (localtime_r) for the fills / CU timestamps ŌĆö thread-
# safe, unlike the `time` crate's local-offset, which refuses in a
# multithreaded process (the TUI has background threads by then).
libc = "0.2"
# The off-chain client: Codama instruction builders (whose AccountMeta
# ordering is the single source of truth `chain.rs` builds on), the typed
# `fetch_*` account decoders, the `layout` slab mirror (active-vault walk
# for teardown), and the blocking `RpcClient` ŌĆö all behind `fetch`.
dropset-sdk = { path = "../sdk/rs", features = ["fetch"] }
open = "5"
ratatui = "0.29"
# Pinned to the SDK's 3.x line (sdk/rs/Cargo.toml) so there is one
# `Pubkey` / `Instruction` / `RpcClient` type across the builder, fetch,
# and transaction paths ŌĆö NOT the workspace's solana-pubkey 4.x, which the
# on-chain crate uses. `~3.1` on solana-client matches the validator minor
# the Makefile's check-toolchain gates (3.1.x) for wire/RPC agreement.
solana-client = "~3.1"
solana-commitment-config = "3"
solana-instruction = "3"
solana-keypair = "3"
solana-loader-v3-interface = { version = "6", features = ["bincode"] }
solana-native-token = "3"
solana-pubkey = "3"
solana-signer = "3"
# Parse a log-subscription signature to fetch its transaction, and read the
# transaction's inner instructions to decode fills ŌĆö the light client-types
# crate, matching the maker bot's fills path.
solana-signature = "3"
solana-transaction = "3"
solana-transaction-status-client-types = "3"
tempfile = "3"

# Build a `FillEvent`'s borsh body when exercising the fill decoder's
# emitting-program check (fills.rs tests). Not needed at runtime ŌĆö the SDK's
# `decode_event_payload` owns the decode.
[dev-dependencies]
borsh = "1"

[lib]
name = "dropset_tui"
path = "src/lib.rs"

[package]
# Two binaries live here (dropset-tui, dropset-teardown), so a bare
# `cargo run -p dropset-tui` (what `make tui` runs) is ambiguous without this.
default-run = "dropset-tui"
description = "Localnet control-plane TUI for the Dropset eCLOB program."
name = "dropset-tui"
publish = false
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
