# cspell:word rustls
# The FX-stablecoin liquidity survey app (docs/fx-survey.md), and the first
# consumer of the shared `feeds` framework (docs/data-feeds.md) — so it proves
# the source → store-sink path end to end. Two binaries built from one image:
# `fx-survey-migrate` (run-once schema + framework cursor table) and
# `fx-survey-coinbase` (the Coinbase EURC/USDC reference feed, §4). HTTP-only:
# it enables `feeds`' `http` + `store` features and never compiles the Solana
# or streaming transports.

[[bin]]
name = "fx-survey-migrate"
path = "src/bin/migrate.rs"

[[bin]]
name = "fx-survey-coinbase"
path = "src/bin/coinbase.rs"

[dependencies]
anyhow = "1"
# `feeds`' `Source` / `StoreWriter` are `#[async_trait]` traits, so this crate
# needs the macro to implement them.
async-trait = "0.1"
# The shared ingestion framework: the Coinbase source composes its `HttpClient`,
# the migrate runner its `PgCursorStore`, and both binaries the `run` runner +
# `StoreSink`. Only the poll-into-store path is needed, so just `http` + `store`
# — no `rpc`/`stream`, so no Solana tree.
dropset-feeds = { path = "../../feeds", features = ["http", "store"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Runtime (string-typed) queries and the app schema DDL; no compile-time
# `DATABASE_URL`, so no `macros`/`migrate` feature. `rustls` matches the store
# sink's TLS backend so nothing pulls in openssl.
sqlx = { version = "0.8", default-features = false, features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
] }
tokio = { version = "1", features = [
  "rt-multi-thread",
  "macros",
  "signal",
  "time",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[package]
description = "FX-stablecoin liquidity survey app and its Coinbase reference feed."
name = "dropset-fx-survey"
publish = false
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
