# cspell:word cdylib

[dependencies]
anchor-lang-v2.workspace = true
anchor-spl-v2.workspace = true
solana-program-log.workspace = true
solana-sdk-ids.workspace = true
wincode.workspace = true

# `anchor-lang-v2` is re-declared here with the `testing` feature so the
# stack-backed `AccountBuffer` becomes available to unit tests inside
# `src/`. Dev-dependencies are NOT included in `cargo build-sbf`
# (anchor build) — the production .so never ships the testing scaffold.
[dev-dependencies]
# The off-chain SDK, used by tests/sdk_conformance.rs to verify its layout
# decoder + matching simulator against the real engine running in litesvm.
dropset-sdk = {path = "../../sdk/rs"}
anchor-lang-v2 = {workspace = true, features = ["testing"]}
anchor-v2-testing.workspace = true
litesvm.workspace = true
solana-instruction.workspace = true
solana-keypair.workspace = true
solana-loader-v3-interface.workspace = true
solana-native-token.workspace = true
solana-pubkey.workspace = true

[features]
# Feature-gated teardown surface (force-withdraw + close instructions).
# Per the architecture spec (§ Account lifecycle and rent reclamation),
# these are compiled into testnet / early-mainnet builds — where
# redeploy-from-scratch is a live operational tool — and dropped from
# the final immutable deploy.
#
# Decision (ENG-447): kept in `default` for now since the program is
# pre-final and the teardown integration suite (`tests/teardown.rs`) is
# `#[cfg(feature = "admin-teardown")]`-gated, so `make test` must build
# the feature on. The final immutable build MUST drop it from `default`;
# `make test-no-teardown` already exercises the feature-off dispatcher
# (every teardown instruction then returns `TeardownDisabled`).
admin-teardown = []
cpi = ["no-entrypoint"]
default = ["admin-teardown"]
# Anchor v2 derive macros emit `cfg(feature = "idl-build")` gated code in
# user crates. The lang-v2 / spl-v2 crates removed the matching forwarded
# features (e3cf7608 V2: Remove idl-build from Anchor crates), so this
# stays a stub that only flips the cfg locally.
idl-build = []
no-entrypoint = []
no-log-ix-name = []
profile = ["anchor-v2-testing/profile"]

[lib]
crate-type = ["cdylib", "lib"]

[lints.rust.unexpected_cfgs]
check-cfg = ['cfg(target_os, values("solana"))']
level = "warn"

[package]
edition = "2021"
name = "dropset"
publish = false
version = "0.1.0"
