# cspell:word cdylib

[dependencies]
# `const-rent` folds `rent_exempt_lamports` to the baked-in
# `(ACCOUNT_STORAGE_OVERHEAD + space) * DEFAULT_LAMPORTS_PER_BYTE` (6960
# lamports/byte). The default runtime path instead reads the Rent sysvar via
# pinocchio's `Rent::get()`, which deserializes only the leading
# `lamports_per_byte_year` (3480) and never applies the `exemption_threshold`
# (2.0) — so on every pre-SIMD-0194 cluster it returns exactly half the true
# rent-exempt minimum and `#[account(init)]` under-funds the PDA, which a real
# validator's post-execution rent check rejects (litesvm skips that check, so
# the program tests never saw it). The const rate equals `3480 * 2` today and
# `6960 * 1` once SIMD-0194 activates, so it is correct across the transition;
# the only tradeoff is a custom-rent cluster, which neither mainnet nor
# `solana-test-validator` is.
anchor-lang-v2 = { workspace = true, features = ["const-rent"] }
# Canonical consensus arithmetic — `Price` codec, pure matcher math, and
# the share/NAV/PnL kernels (interface.md § SDK). Pulled with
# `default-features = false` to keep the build solana-free; `idl` turns on
# Anchor's `IdlType` derive for `Price` so the generated IDL still emits it.
dropset-math-core = { path = "../../sdk/math-core", default-features = false, features = [
  "idl",
] }
anchor-spl-v2.workspace = true
solana-program-log.workspace = true
solana-sdk-ids.workspace = true
wincode.workspace = true

# `anchor-lang-v2` is re-declared here with the `testing` feature so the
# stack-backed `AccountBuffer` becomes available to unit tests inside
# `src/`. Dev-dependencies are NOT included in `cargo build-sbf`
# (anchor build) — the production .so never ships the testing scaffold.
[dev-dependencies]
anchor-lang-v2 = { workspace = true, features = ["testing"] }
# The off-chain SDK, used by tests/sdk_conformance.rs to verify its layout
# decoder + matching simulator against the real engine running in litesvm.
dropset-sdk = { path = "../../sdk/rs" }
# Reads the shared sdk/conformance/price_vectors.json in
# tests/price_conformance.rs (the program-side codec pin).
serde_json = "1"
anchor-v2-testing.workspace = true
litesvm.workspace = true
solana-instruction.workspace = true
solana-keypair.workspace = true
solana-loader-v3-interface.workspace = true
solana-native-token.workspace = true
solana-pubkey.workspace = true

[features]
# Feature-gated teardown surface (force-withdraw + close instructions).
# Per the architecture spec (§ Account lifecycle and rent reclamation),
# these are compiled into testnet / early-mainnet builds — where
# redeploy-from-scratch is a live operational tool — and dropped from
# the final immutable deploy.
#
# Decision: kept in `default` for now since the program is
# pre-final and the teardown integration suite (`tests/teardown.rs`) is
# `#[cfg(feature = "admin-teardown")]`-gated, so `make test` must build
# the feature on. The final immutable build MUST drop it from `default`;
# `make test-no-teardown` already exercises the feature-off dispatcher
# (every teardown instruction then returns `TeardownDisabled`).
admin-teardown = []
# Production entrypoint: the `SetReferencePrice` discriminator is handled
# by the hand-written sBPF `src/asm/entrypoint.s`, which short-circuits it
# ahead of Anchor's dispatcher and `call`s the dispatcher for everything
# else. Off by default until Rust↔ASM parity and the CU saving are
# validated; the default (feature-off) build keeps the plain Anchor
# entrypoint + the reference Rust handler, which doubles as the parity
# oracle. See the architecture spec's **SetReferencePrice**. The build
# wiring (anchor-lang-v2 `no-entrypoint` + the asm include) is added with
# the entrypoint itself.
asm-entrypoint = []
cpi = ["no-entrypoint"]
default = ["admin-teardown"]
# Anchor v2 derive macros emit `cfg(feature = "idl-build")` gated code in
# user crates. The lang-v2 / spl-v2 crates removed the matching forwarded
# features (e3cf7608 V2: Remove idl-build from Anchor crates), so this
# only flips the cfg locally — plus forwards to math-core, where the
# `Price` type's `IdlType` impl lives, so `anchor idl build` still emits it.
idl-build = ["dropset-math-core/idl-build"]
no-entrypoint = []
no-log-ix-name = []
profile = ["anchor-v2-testing/profile"]

[lib]
crate-type = ["cdylib", "lib"]

[lints.rust.unexpected_cfgs]
check-cfg = ['cfg(target_os, values("solana"))']
level = "warn"

[package]
name = "dropset"
publish = false
edition.workspace = true
version.workspace = true
